--- a/public/pages/checkout.html
+++ b/public/pages/checkout.html
@@ -1,173 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Checkout - GoSayur</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout - Ecommerce Tailwind</title>
-
-    <link rel="shortcut icon" href="../assets/images/favicon/favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/main.css" />
     <script src="../nav.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+    />
+  </head>
 
-<body>
-<nav id="nav"></nav>
-    
+  <body>
+    <nav id="nav"></nav>
+
     <!-- breadcrumb -->
     <div class="container py-4 flex items-center gap-3">
-        <a href="../index.html" class="text-green-600 text-base">
-            <i class="fa-solid fa-house"></i>
-        </a>
-        <span class="text-sm text-gray-400">
-            <i class="fa-solid fa-chevron-right"></i>
-        </span>
-        <p class="text-gray-600 font-medium">Checkout</p>
+      <a href="../index.html" class="text-green-600 text-base">
+        <i class="fa-solid fa-house"></i>
+      </a>
+      <span class="text-sm text-gray-400">
+        <i class="fa-solid fa-chevron-right"></i>
+      </span>
+      <p class="text-gray-600 font-medium">Checkout</p>
     </div>
     <!-- ./breadcrumb -->
 
     <!-- wrapper -->
     <div class="container grid grid-cols-12 items-start pb-16 pt-4 gap-6">
+      <div class="col-span-8 border border-gray-200 p-4 rounded">
+        <h3 class="text-lg font-medium capitalize mb-4">Checkout</h3>
+        <div class="space-y-4">
+          <div>
+            <label for="Nama" class="text-gray-600">Nama</label>
+            <input type="text" name="company" id="company" class="input-box" />
+          </div>
+          <div>
+            <label for="notelp" class="text-gray-600">Nomor Telepon</label>
+            <input type="text" name="region" id="region" class="input-box" />
+          </div>
+          <div>
+            <label for="Provinsi" class="text-gray-600">Provinsi</label>
+            <input type="text" name="address" id="address" class="input-box" />
+          </div>
+          <div>
+            <label for="Kota" class="text-gray-600">Kota/Kabupaten</label>
+            <input type="text" name="city" id="city" class="input-box" />
+          </div>
+          <div>
+            <label for="Kecamatan" class="text-gray-600">Kecamatan</label>
+            <input type="text" name="phone" id="phone" class="input-box" />
+          </div>
+          <div>
+            <label for="alamat" class="text-gray-600">Alamat Lengkap</label>
+            <input type="text" name="email" id="email" class="input-box" />
+          </div>
+        </div>
+      </div>
 
-        <div class="col-span-8 border border-gray-200 p-4 rounded">
-            <h3 class="text-lg font-medium capitalize mb-4">Checkout</h3>
-            <div class="space-y-4">
-                <div class="grid grid-cols-2 gap-4">
-                    <div>
-                        <label for="first-name" class="text-gray-600">First Name <span
-                                class="text-green-600">*</span></label>
-                        <input type="text" name="first-name" id="first-name" class="input-box">
-                    </div>
-                    <div>
-                        <label for="last-name" class="text-gray-600">Last Name <span
-                                class="text-green-600">*</span></label>
-                        <input type="text" name="last-name" id="last-name" class="input-box">
-                    </div>
-                </div>
-                <div>
-                    <label for="company" class="text-gray-600">Company</label>
-                    <input type="text" name="company" id="company" class="input-box">
-                </div>
-                <div>
-                    <label for="region" class="text-gray-600">Country/Region</label>
-                    <input type="text" name="region" id="region" class="input-box">
-                </div>
-                <div>
-                    <label for="address" class="text-gray-600">Street address</label>
-                    <input type="text" name="address" id="address" class="input-box">
-                </div>
-                <div>
-                    <label for="city" class="text-gray-600">City</label>
-                    <input type="text" name="city" id="city" class="input-box">
-                </div>
-                <div>
-                    <label for="phone" class="text-gray-600">Phone number</label>
-                    <input type="text" name="phone" id="phone" class="input-box">
-                </div>
-                <div>
-                    <label for="email" class="text-gray-600">Email address</label>
-                    <input type="email" name="email" id="email" class="input-box">
-                </div>
-                <div>
-                    <label for="company" class="text-gray-600">Company</label>
-                    <input type="text" name="company" id="company" class="input-box">
-                </div>
+      <div class="col-span-4 border border-gray-200 p-4 rounded">
+        <h4 class="text-gray-800 text-lg mb-4 font-medium uppercase">
+          order summary
+        </h4>
+        <div class="space-y-2">
+          <div class="flex justify-between">
+            <div>
+              <h5 class="text-gray-800 font-medium">Italian shape sofa</h5>
+              <p class="text-sm text-gray-600">Size: M</p>
             </div>
-
+            <p class="text-gray-600">x3</p>
+            <p class="text-gray-800 font-medium">$320</p>
+          </div>
+          <div class="flex justify-between">
+            <div>
+              <h5 class="text-gray-800 font-medium">Italian shape sofa</h5>
+              <p class="text-sm text-gray-600">Size: M</p>
+            </div>
+            <p class="text-gray-600">x3</p>
+            <p class="text-gray-800 font-medium">$320</p>
+          </div>
+          <div class="flex justify-between">
+            <div>
+              <h5 class="text-gray-800 font-medium">Italian shape sofa</h5>
+              <p class="text-sm text-gray-600">Size: M</p>
+            </div>
+            <p class="text-gray-600">x3</p>
+            <p class="text-gray-800 font-medium">$320</p>
+          </div>
+          <div class="flex justify-between">
+            <div>
+              <h5 class="text-gray-800 font-medium">Italian shape sofa</h5>
+              <p class="text-sm text-gray-600">Size: M</p>
+            </div>
+            <p class="text-gray-600">x3</p>
+            <p class="text-gray-800 font-medium">$320</p>
+          </div>
         </div>
 
-        <div class="col-span-4 border border-gray-200 p-4 rounded">
-            <h4 class="text-gray-800 text-lg mb-4 font-medium uppercase">order summary</h4>
-            <div class="space-y-2">
-                <div class="flex justify-between">
-                    <div>
-                        <h5 class="text-gray-800 font-medium">Italian shape sofa</h5>
-                        <p class="text-sm text-gray-600">Size: M</p>
-                    </div>
-                    <p class="text-gray-600">
-                        x3
-                    </p>
-                    <p class="text-gray-800 font-medium">$320</p>
-                </div>
-                <div class="flex justify-between">
-                    <div>
-                        <h5 class="text-gray-800 font-medium">Italian shape sofa</h5>
-                        <p class="text-sm text-gray-600">Size: M</p>
-                    </div>
-                    <p class="text-gray-600">
-                        x3
-                    </p>
-                    <p class="text-gray-800 font-medium">$320</p>
-                </div>
-                <div class="flex justify-between">
-                    <div>
-                        <h5 class="text-gray-800 font-medium">Italian shape sofa</h5>
-                        <p class="text-sm text-gray-600">Size: M</p>
-                    </div>
-                    <p class="text-gray-600">
-                        x3
-                    </p>
-                    <p class="text-gray-800 font-medium">$320</p>
-                </div>
-                <div class="flex justify-between">
-                    <div>
-                        <h5 class="text-gray-800 font-medium">Italian shape sofa</h5>
-                        <p class="text-sm text-gray-600">Size: M</p>
-                    </div>
-                    <p class="text-gray-600">
-                        x3
-                    </p>
-                    <p class="text-gray-800 font-medium">$320</p>
-                </div>
-            </div>
-
-            <div class="flex justify-between border-b border-gray-200 mt-1 text-gray-800 font-medium py-3 uppercas">
-                <p>subtotal</p>
-                <p>$1280</p>
-            </div>
-
-            <div class="flex justify-between border-b border-gray-200 mt-1 text-gray-800 font-medium py-3 uppercas">
-                <p>shipping</p>
-                <p>Free</p>
-            </div>
-
-            <div class="flex justify-between text-gray-800 font-medium py-3 uppercas">
-                <p class="font-semibold">Total</p>
-                <p>$1280</p>
-            </div>
-
-            <div class="flex items-center mb-4 mt-2">
-                <input type="checkbox" name="aggrement" id="aggrement"
-                    class="text-green-600 focus:ring-0 rounded-sm cursor-pointer w-3 h-3">
-                <label for="aggrement" class="text-gray-600 ml-3 cursor-pointer text-sm">I agree to the <a href="#"
-                        class="text-green-600">terms & conditions</a></label>
-            </div>
-
-            <a href="#"
-                class="block w-full py-3 px-4 text-center text-white bg-green-600 border border-green-600 rounded-md hover:bg-transparent hover:text-green-600 transition font-medium">Place
-                order</a>
+        <div
+          class="flex justify-between border-b border-gray-200 mt-1 text-gray-800 font-medium py-3 uppercas"
+        >
+          <p>subtotal</p>
+          <p>$1280</p>
         </div>
 
+        <div
+          class="flex justify-between border-b border-gray-200 mt-1 text-gray-800 font-medium py-3 uppercas"
+        >
+          <p>shipping</p>
+          <p>Free</p>
+        </div>
+
+        <div
+          class="flex justify-between text-gray-800 font-medium py-3 uppercas"
+        >
+          <p class="font-semibold">Total</p>
+          <p>$1280</p>
+        </div>
+
+        <div class="flex items-center mb-4 mt-2">
+          <input
+            type="checkbox"
+            name="aggrement"
+            id="aggrement"
+            class="text-green-600 focus:ring-0 rounded-sm cursor-pointer w-3 h-3"
+          />
+          <label
+            for="aggrement"
+            class="text-gray-600 ml-3 cursor-pointer text-sm"
+            >I agree to the
+            <a href="#" class="text-green-600">terms & conditions</a></label
+          >
+        </div>
+
+        <a
+          href="#"
+          class="block w-full py-3 px-4 text-center text-white bg-green-600 border border-green-600 rounded-md hover:bg-transparent hover:text-green-600 transition font-medium"
+          >Place order</a
+        >
+      </div>
     </div>
     <!-- ./wrapper -->
 
     <footer id="footer"></footer>
     <script>
-        document.getElementById('nav').innerHTML = navigasi; 
-        document.getElementById('footer').innerHTML = foot; 
-       
-       </script>
-
- 
-</body>
-
+      document.getElementById("nav").innerHTML = navigasi;
+      document.getElementById("footer").innerHTML = foot;
+    </script>
+  </body>
 </html>
