delete file gaguna lagi

--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
     
                 </form>
                
-                <a href="pages/checkout.html">
+                <a href="#">
                     <img src="assets/images/icons/chat.svg" class="pt-1">
                 </a>
                 <a href="pages/checkout.html">
