--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
                 <a href="#">
                     <img src="assets/images/icons/chat.svg" class="pt-1">
                 </a>
-                <a href="pages/checkout.html">
+                <a href="pages/cart.html">
                     <img src="assets/images/icons/cart.svg">
                 </a>
            
@@ -223,8 +223,7 @@
                 </div>
                 <div class="pt-4 pb-3 px-4">
                     <a href="pages/product.html">
-                        <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">Guyer
-                            Chair</h4>
+                        <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">Selada</h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
                         <p class="text-xl text-green-600 font-semibold">Rp. 2000</p>
@@ -401,8 +400,7 @@
                 </div>
                 <div class="pt-4 pb-3 px-4 ">
                     <a href="#">
-                        <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">Guyer
-                            Chair</h4>
+                        <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">Selada</h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
                         <p class="text-xl text-green-600 font-semibold">Rp. 2000</p>
@@ -564,8 +562,7 @@
                 </div>
                 <div class="pt-4 pb-3 px-4">
                     <a href="#">
-                        <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">Guyer
-                            Chair</h4>
+                        <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">Selada</h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
                         <p class="text-xl text-green-600 font-semibold">Rp. 2000</p>
