Finish UI tahap 1

--- a/public/index.html
+++ b/public/index.html
@@ -248,7 +248,7 @@
                     </div>
                 </div>
                 <div class="pt-4 pb-3 px-4">
-                    <a href="#">
+                    <a href="pages/product.html">
                         <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">Daging ayam 1 Kg</h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
@@ -288,7 +288,7 @@
                     </div>
                 </div>
                 <div class="pt-4 pb-3 px-4">
-                    <a href="#">
+                    <a href="pages/product.html">
                         <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">
                             Nugget Kanzler</h4>
                     </a>
@@ -329,7 +329,7 @@
                     </div>
                 </div>
                 <div class="pt-4 pb-3 px-4">
-                    <a href="#">
+                    <a href="pages/product.html">
                         <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">
                             Jahe</h4>
                     </a>
@@ -354,8 +354,7 @@
             </div>
         </div>
     </div>
-    <!-- ./new arrival -->
-
+   
     <!-- ads -->
     <div class="container pb-16">
         <a href="#">
@@ -386,7 +385,7 @@
                     </div>
                 </div>
                 <div class="pt-4 pb-3 px-4 ">
-                    <a href="#">
+                    <a href="pages/product.html">
                         <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">Selada</h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
@@ -426,7 +425,7 @@
                     </div>
                 </div>
                 <div class="pt-4 pb-3 px-4">
-                    <a href="#">
+                    <a href="pages/product.html">
                         <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">Daging ayam 1 Kg</h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
@@ -466,7 +465,7 @@
                     </div>
                 </div>
                 <div class="pt-4 pb-3 px-4">
-                    <a href="#">
+                    <a href="pages/product.html">
                         <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">
                             Nugget Kanzler</h4>
                     </a>
@@ -507,7 +506,7 @@
                     </div>
                 </div>
                 <div class="pt-4 pb-3 px-4">
-                    <a href="#">
+                    <a href="pages/product.html">
                         <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">
                             Jahe</h4>
                     </a>
@@ -548,7 +547,7 @@
                     </div>
                 </div>
                 <div class="pt-4 pb-3 px-4">
-                    <a href="#">
+                    <a href="pages/product.html">
                         <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">Selada</h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
@@ -588,7 +587,7 @@
                     </div>
                 </div>
                 <div class="pt-4 pb-3 px-4">
-                    <a href="#">
+                    <a href="pages/product.html">
                         <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">Daging ayam 1 Kg</h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
@@ -628,7 +627,7 @@
                     </div>
                 </div>
                 <div class="pt-4 pb-3 px-4">
-                    <a href="#">
+                    <a href="pages/product.html">
                         <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">
                             Nugget Kanzler</h4>
                     </a>
@@ -669,7 +668,7 @@
                     </div>
                 </div>
                 <div class="pt-4 pb-3 px-4">
-                    <a href="#">
+                    <a href="pages/product.html">
                         <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-green-600 transition">
                             Jahe</h4>
                     </a>
