--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -30,7 +30,7 @@
             <p class="text-gray-600 mb-6 text-sm">
                 welcome back customer
             </p>
-            <form action="#" method="post" autocomplete="off">
+            <form action="/login" method="post" autocomplete="off">
                 <div class="space-y-2">
                     <div>
                         <label for="email" class="text-gray-600 mb-2 block">Email address</label>
